--- a/JuliaCon_Parallel_Workshop.ipynb
+++ b/JuliaCon_Parallel_Workshop.ipynb
@@ -128,14 +128,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@async : 1\n",
+      "@schedule : Hello\n"
+     ]
+    }
+   ],
    "source": [
     "a=1\n",
     "\n",
@@ -165,14 +174,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "consumer 1 ===> 1\n",
+      "consumer 3 ===> 3\n",
+      "consumer 2 ===> 2\n",
+      "consumer 1 ===> 4\n",
+      "consumer 3 ===> 5\n",
+      "consumer 2 ===> 6\n",
+      "Producer DONE!\n",
+      "consumer 1 DONE!\n",
+      "consumer 3 DONE!\n",
+      "consumer 2 DONE!\n"
+     ]
+    }
+   ],
    "source": [
     "function producer(cnt)\n",
     "    @schedule begin\n",
@@ -185,7 +211,6 @@
     "\n",
     "function consumer(t, id)\n",
     "    @schedule begin\n",
-    "        sleep(1.0)\n",
     "        while !istaskdone(t)\n",
     "            v = consume(t)\n",
     "            (v != nothing) && println(\"consumer $id ===> $v\")\n",
@@ -205,14 +230,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "consumed 1\n",
+      "consumed 2\n",
+      "consumed 3\n",
+      "consumed 4\n",
+      "consumed 5\n",
+      "consumed 6\n",
+      "Producer DONE!\n"
+     ]
+    }
+   ],
    "source": [
     "# start a producer task\n",
     "t=producer(6);\n",
@@ -305,17 +344,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "49995000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.989842 seconds (11.48 k allocations: 639.769 KB)\n"
+     ]
+    }
+   ],
    "source": [
     "nprocs() > 1 && rmprocs(workers(); waitfor=0.5)\n",
-    "addprocs(4)\n",
+    "addprocs(10)\n",
     "@parallel (+) for i in 1:100\n",
     "    rand(Bool)\n",
     "end\n",
@@ -334,18 +398,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1-element Array{Any,1}:\n",
+       " RemoteException(37,CapturedException(could not spawn `md5 /Users/amitm/Julia/julia/base/JuliaCon_Parallel_Workshop.jl`: no such file or directory (ENOENT),Any[(:_jl_spawn,symbol(\"process.jl\"),262,symbol(\"\"),-1,1),(:anonymous,symbol(\"process.jl\"),415,symbol(\"\"),-1,1),(:setup_stdio,symbol(\"process.jl\"),403,symbol(\"\"),-1,1),(:spawn,symbol(\"process.jl\"),414,symbol(\"\"),-1,1),(:open,symbol(\"process.jl\"),478,symbol(\"\"),-1,1),(:readbytes,symbol(\"process.jl\"),513,symbol(\"\"),-1,1),(:anonymous,symbol(\"In[14]\"),16,symbol(\"\"),-1,1),(:anonymous,symbol(\"multi.jl\"),892,symbol(\"\"),-1,1),(:run_work_thunk,symbol(\"multi.jl\"),645,symbol(\"\"),-1,1),(:anonymous,symbol(\"multi.jl\"),892,symbol(\"task.jl\"),63,1)]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.124461 seconds (1.90 k allocations: 95.912 KB)\n"
+     ]
+    }
+   ],
    "source": [
     "nprocs() > 1 && rmprocs(workers(); waitfor=0.5)\n",
-    "addprocs(4)\n",
-    "files = filter(x->endswith(x, \".jl\"), readdir(\"/Users/amitm/Julia/julia/base\"))\n",
+    "addprocs(2)\n",
+    "files = filter(x->endswith(x, \".jl\"), readdir(\"./\"))\n",
     "\n",
     "# compilation run\n",
     "pmap(x->begin\n",
@@ -373,14 +463,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RemoteRef{Channel{Any}}(1,1,104)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nprocs() > 1 && rmprocs(workers(); waitfor=0.5)\n",
-    "addprocs(4)\n",
+    "addprocs(2)\n",
     "\n",
     "jobs_c = RemoteRef(()->Channel(100))\n",
     "results_c = RemoteRef(()->Channel(100))"
@@ -388,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -416,11 +517,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tFrom worker 39:\tWorker task started.\n",
+      "\tFrom worker 38:\tWorker task started.\n"
+     ]
+    }
+   ],
    "source": [
     "# start the worker tasks....\n",
     "for p in workers()\n",
@@ -430,11 +540,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\tFrom worker 39:\tDONE!\n"
+     ]
+    }
+   ],
    "source": [
     "# adding jobs....\n",
     "jobs = rand(1:10, 30)\n",
@@ -450,11 +569,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "worker 38 : 9\n",
+      "worker 39 : 10\n",
+      "worker 39 : 2\n",
+      "worker 39 : 1\n",
+      "worker 38 : 8\n",
+      "worker 38 : 1\n",
+      "worker 39 : 6\n",
+      "worker 38 : 6\n",
+      "worker 39 : 9\n",
+      "worker 38 : 6\n",
+      "worker 38 : 3\n",
+      "worker 38 : 2\n",
+      "worker 39 : 10\n",
+      "worker 39 : 6\n",
+      "worker 38 : 10\n",
+      "worker 38 : 5\n",
+      "worker 39 : 10\n",
+      "worker 39 : 2\n",
+      "worker 38 : 6\n",
+      "worker 38 : 5\n",
+      "worker 39 : 6\n",
+      "worker 38 : 2\n",
+      "worker 38 : 4\n",
+      "worker 39 : 8\n",
+      "worker 38 : 3\n",
+      "worker 38 : 3\n",
+      "worker 38 : 3\n",
+      "worker 39 : 9\n",
+      "worker 38 : 8\n",
+      "\tFrom worker 38:\tDONE!\n",
+      "worker 39 : 6"
+     ]
+    }
+   ],
    "source": [
     "for i in 1:length(jobs)\n",
     "    (wrkr, data) = take!(results_c) \n",
@@ -741,7 +898,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.0-rc3",
+   "display_name": "Julia 0.4.0",
    "language": "julia",
    "name": "julia-0.4"
   },
